--- a/index.html
+++ b/index.html
@@ -424,9 +424,10 @@
             <img src="img/pay/pay.png" alt="">
         </div>
         <div class="copyright">
-            <p>@ 2021, Tech2 etc - HTML CSS Ecommerce Template</p>
+            <p>Copyright © 2025 Nikhil Kumar. All rights reserved.</p>
         </div>
     </footer>
     <script src="script.js"></script>
 </body>
+
 </html>
